# file-dup

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
ai/: 2025-11-24-command-messageinit-is-analyzing-your-codebase.txt  2025-11-29-why-is-the-size-of-the-release-binary-over-2-mb.txt  2025-12-13-review-the-code-in-this-directory-is-there-a-way.txt  CLAUDE.md
src/: file_hash.rs  file_util.rs  lib.rs  main.rs
tests/: integration_test.rs
