[package]
name = "file-dup"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
sha1 = "0.10.5"
data-encoding = "2.4.0"
chrono = "0.4.26"
glob = "0.3.1"
regex = "1.8.4"
cargo-audit = "0.17.6"
rayon = "1.7.0"

[dev-dependencies]
tempfile = "3.6.0"

# debug = true to profile release code
[profile.release]
debug = true
lto = true
