[package]
name = "file-dup"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
blake3 = { version = "1.5.0", features = ["rayon"] }
data-encoding = "2.4.0"
chrono = "0.4.26"
glob = "0.3.1"
regex = "1.8.4"
rayon = "1.7.0"
memmap2 = "0.9.0"
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = "3.6.0"
assert_cmd = "2.0"
predicates = "3.0"

# debug = true to profile release code
[profile.release]
debug = true
lto = true
